[gd_scene load_steps=7 format=3 uid="uid://bgj2a4xo5pva5"]

[ext_resource type="Script" path="res://2048.gd" id="1_oqs6f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fp11j"]
bg_color = Color(0.521662, 1, 0.902416, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0mqit"]
bg_color = Color(0.0915584, 0.692478, 0.623615, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qkmk2"]
bg_color = Color(0.31318, 0.888732, 0.529149, 1)

[sub_resource type="InputEventAction" id="InputEventAction_okts1"]
action = &"back"

[sub_resource type="Shortcut" id="Shortcut_c40hw"]
events = [SubResource("InputEventAction_okts1")]

[node name="2048" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oqs6f")

[node name="body" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -800.0
offset_right = 540.0
offset_bottom = 800.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="HBoxContainer" type="HBoxContainer" parent="body"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="score" type="Label" parent="body/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5
theme_override_font_sizes/font_size = 72
theme_override_styles/normal = SubResource("StyleBoxFlat_fp11j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="body/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="body/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="best_score" type="Label" parent="body/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_0mqit")
horizontal_alignment = 1
vertical_alignment = 1

[node name="save" type="Button" parent="body/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_qkmk2")
text = "保存"

[node name="load" type="Button" parent="body/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_qkmk2")
text = "加载"

[node name="HBoxContainer2" type="HBoxContainer" parent="body/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="back" type="Button" parent="body/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_qkmk2")
shortcut = SubResource("Shortcut_c40hw")
text = "撤回"

[node name="restart" type="Button" parent="body/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_qkmk2")
text = "重置"

[node name="exit" type="Button" parent="body/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_qkmk2")
text = "退出"

[node name="GridContainer" type="GridContainer" parent="body"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.21
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="pressed" from="body/HBoxContainer/VBoxContainer/HBoxContainer/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="body/HBoxContainer/VBoxContainer/HBoxContainer/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="body/HBoxContainer/VBoxContainer/HBoxContainer2/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="body/HBoxContainer/VBoxContainer/HBoxContainer2/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="body/HBoxContainer/VBoxContainer/HBoxContainer2/exit" to="." method="_on_exit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
